fix: disable overscroll to prevent sidebar appearing behind content (temporary fix)

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5079,7 +5079,12 @@ template {
   box-sizing: border-box;
 }
 
-/* line 10, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 11, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+html {
+  overscroll-behavior: none;
+}
+
+/* line 15, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 body {
   font-size: 1rem;
   line-height: 1.42857;
@@ -5089,56 +5094,56 @@ body {
   background-color: #fff;
 }
 
-/* line 16, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 21, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 h1 {
   font-size: 2.25rem;
   font-weight: 400;
   line-height: 1.1;
 }
 
-/* line 20, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 25, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 h2, h3, h4 {
   font-weight: 400;
   line-height: 1.1;
   margin: 0 0 15px;
 }
 
-/* line 25, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 30, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 p {
   line-height: 1.875rem;
   margin: 0 0 10px;
   margin-bottom: 25px;
 }
 
-/* line 31, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 36, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 a {
   color: inherit;
   text-decoration: none;
 }
 
-/* line 36, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 41, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 a:hover:has(strong), a:hover:not(:has(*)) {
   text-decoration: underline;
 }
 
-/* line 42, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 47, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-/* line 48, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 53, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 img {
   vertical-align: middle;
 }
 
-/* line 52, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 57, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 strong {
   font-weight: 600;
 }
 
-/* line 56, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
+/* line 61, ../../../../../xampp/htdocs/websites/NetmattersHomepage/sass/base/_base.scss */
 label {
   display: inline-block;
   font-weight: 600;
