--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,6 +7,11 @@
     box-sizing: border-box;
 }
 
+// Prevent scroll bounce.
+html {
+    overscroll-behavior: none;
+}
+
 body {
     @include font($size: rem(16px), $hght: $line-height, $spce: $letter-spacing, $color: $color--grey-dark);
     font-family: $font-family;
